1.2.3 - TBD
    * Fixed error preventing naming and overwriting of custom camera presets
    * Changed map status text color to red to improve visibility

1.2.2 - 2014-01-13
    * Added "follow player" option for the 2D map
    * Made 2D map drawing more efficient
    * Adjusted default Sun intensity to 1.25
    * It is now possible to save and load custom camera presets
    * Made Render Controls dialog more compact
    * Moved camera presets to drop-down list
    * Added Granite, Diorite, and Andesite stone blocks
    * Chunky now dynamically refreshes the main map view based on
      changes to the Minecraft world as detected in the filesystem
    * Added Chunky commands: -snapshot, -version, -download-mc
    * Added launcher commands: --setup, --update, --version, --verbose
    * Fixed error causing the launcher to crash when running in headless mode
      if the launcher GUI had not previously been run
    * The launcher (v1.7.0 and later) now ignores older releases if a newer
      version already is installed
    * Using -render without a scene name argument prints out available scenes
    * Added Help tab listing keyboard shortcuts in the Render Controls window
    * Pressing U in the Render Preview window makes it go fullscreen
    * The scene selector can now to delete scenes or export scenes to Zip file
    * Fixed potential crash in the launcher from a clean install

1.2.1 - 2014-01-03
    * Added -set and -reset command-line options
    * Removed global persistent skymap configuration option - skymap is now
      strictly a per-scene setting
    * Fixed error causing the saveSnapshot setting to be ignored
    * Snapshots are now saved when the scene hits the SPP target
    * Fixed error in world size calculation (used for parallel projector ray
      offsets) which caused clipping artifacts in isometric/parallel scenes
    * Fixed error in the scene selector that caused all scenes to try to load
      their respective skymaps